--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
 	<meta charset="utf-8">
 	<title>uyutmaster</title>
-	<meta name="description" content="ремонт и регулировка окон Киев, восстанавливаем окна, устраняем неполадки окон,">
-	<meta name="Keywords" content="ремонт и регулировка окон Киев, ремонт окон, регулировка окон, устраняем неполадки окон ">
+	<meta name="description" content="ремонт и регулировка окон Кривой Рог, восстанавливаем окна, устраняем неполадки окон,">
+	<meta name="Keywords" content="ремонт и регулировка окон Кривой Рог, ремонт окон, регулировка окон, устраняем неполадки окон ">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -73,7 +73,7 @@
 					</div>
 					<div class="col-sm-1 col-md-3 col-lg-2">
 						<div class="city">
-							<i class="fa fa-map-marker" aria-hidden="true"></i>г. Киев
+							<i class="fa fa-map-marker" aria-hidden="true"></i>г. Кривой Рог
 							<span>24/7</span>
 						</div>
 					</div>
@@ -109,7 +109,7 @@
 										<br>
 									</h2>
 									<p>Помимо устранения неисправностей, усовершенствуем и улучшим функциональность исправных конструкций. Лучшие цены в 
-										<span>г.Киев</span>
+										<span>г.Кривой Рог</span>
 									</p>
 									<a class="btn-ph" href="tel:067-56-97-003">
 										<i class="fa fa-phone" aria-hidden="true"></i>
@@ -137,7 +137,7 @@
 										<span>более 13 лет</span>
 									</h2>
 									<p>Мы понимаем, чего хотят клиенты, и у нас есть опыт, чтобы вы могли чувствовать себя комфортно дома. Наш опыт закрепляется гарантией на 7 лет!
-										<span>г.Киев</span>
+										<span>г.Кривой Рог</span>
 									</p>
 									<a class="btn-ph" href="tel:067-56-97-003">
 										<i class="fa fa-phone" aria-hidden="true"></i>
@@ -165,7 +165,7 @@
 										<span>этой зимой</span>
 									</h2>
 									<p>Дует с окна? Не беда! Подготовка окон к зиме. Заказывайте в 
-										<span>г.Киев</span>
+										<span>г.Кривой Рог</span>
 									</p>
 									<a class="btn-ph" href="tel:067-56-97-003">
 										<i class="fa fa-phone" aria-hidden="true"></i>
@@ -220,7 +220,7 @@
 								</tr>
 
 								<tr>
-									<td>Вызов мастера (по Киеву)</td>
+									<td>Вызов мастера (по Кривому Рогу)</td>
 									<td><b>Бесплатно</b></td>
 								</tr>
 
@@ -510,7 +510,7 @@
 						<div class="btn-ph">
 							<i class="fa fa-map-marker" aria-hidden="true"></i>
 						</div>
-						<a href="##">Мы находимся в г. Киев
+						<a href="##">Мы находимся в г. Кривой Рог
 							<br>Работаем без выходных! 24/7</a>
 						</div>
 						<div class="col-sm-6">
