--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
 	<meta charset="utf-8">
 	<title>uyutmaster</title>
-	<meta name="description" content="ремонт и регулировка окон Кривой Рог, восстанавливаем окна, устраняем неполадки окон,">
-	<meta name="Keywords" content="ремонт и регулировка окон Кривой Рог, ремонт окон, регулировка окон, устраняем неполадки окон ">
+	<meta name="description" content="ремонт и регулировка окон Киев, восстанавливаем окна, устраняем неполадки окон,">
+	<meta name="Keywords" content="ремонт и регулировка окон Киев, ремонт окон, регулировка окон, устраняем неполадки окон ">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -73,14 +73,14 @@
 					</div>
 					<div class="col-sm-1 col-md-3 col-lg-2">
 						<div class="city">
-							<i class="fa fa-map-marker" aria-hidden="true"></i>г. Кривой Рог
+							<i class="fa fa-map-marker" aria-hidden="true"></i>г. Киев
 							<span>24/7</span>
 						</div>
 					</div>
 					<div class="col-sm-4 col-md-3 col-lg-2">
 						<div class="phone">
-							<a href="tel:067-56-97-003">
-								<i class="fa fa-phone" aria-hidden="true"></i><b>067-56-97-003</b>
+							<a href="tel:098-124-68-46">
+								<i class="fa fa-phone" aria-hidden="true"></i><b>098-124-68-46</b>
 								<br>
 								<span>Павел</span>
 							</a>
@@ -111,7 +111,7 @@
 									<p>Помимо устранения неисправностей, усовершенствуем и улучшим функциональность исправных конструкций. Лучшие цены в 
 										<span>г.Кривой Рог</span>
 									</p>
-									<a class="btn-ph" href="tel:067-56-97-003">
+									<a class="btn-ph" href="tel:098-124-68-46">
 										<i class="fa fa-phone" aria-hidden="true"></i>
 									</a>
 								</div>
@@ -137,9 +137,9 @@
 										<span>более 13 лет</span>
 									</h2>
 									<p>Мы понимаем, чего хотят клиенты, и у нас есть опыт, чтобы вы могли чувствовать себя комфортно дома. Наш опыт закрепляется гарантией на 7 лет!
-										<span>г.Кривой Рог</span>
+										<span>г.Киев</span>
 									</p>
-									<a class="btn-ph" href="tel:067-56-97-003">
+									<a class="btn-ph" href="tel:098-124-68-46">
 										<i class="fa fa-phone" aria-hidden="true"></i>
 									</a>
 								</div>
@@ -165,9 +165,9 @@
 										<span>этой зимой</span>
 									</h2>
 									<p>Дует с окна? Не беда! Подготовка окон к зиме. Заказывайте в 
-										<span>г.Кривой Рог</span>
+										<span>г.Киев</span>
 									</p>
-									<a class="btn-ph" href="tel:067-56-97-003">
+									<a class="btn-ph" href="tel:098-124-68-46">
 										<i class="fa fa-phone" aria-hidden="true"></i>
 									</a>
 								</div>
@@ -220,7 +220,7 @@
 								</tr>
 
 								<tr>
-									<td>Вызов мастера (по Кривому Рогу)</td>
+									<td>Вызов мастера (по Киеву)</td>
 									<td><b>Бесплатно</b></td>
 								</tr>
 
@@ -510,15 +510,15 @@
 						<div class="btn-ph">
 							<i class="fa fa-map-marker" aria-hidden="true"></i>
 						</div>
-						<a href="##">Мы находимся в г. Кривой Рог
+						<a href="##">Мы находимся в г. Киев
 							<br>Работаем без выходных! 24/7</a>
 						</div>
 						<div class="col-sm-6">
-							<a class="btn-ph"  href="tel:067-56-97-003">
+							<a class="btn-ph"  href="tel:098-124-68-46">
 								<i class="fa fa-phone" aria-hidden="true"></i>
 							</a>
 
-							<a href="tel:067-56-97-003" >тел.067-56-97-003
+							<a href="tel:098-124-68-46" >тел.098-124-68-46
 								<br>В любое время ждем Вас! </a>
 							</div>
 						</div>
