--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 										<br>
 									</h2>
 									<p>Помимо устранения неисправностей, усовершенствуем и улучшим функциональность исправных конструкций. Лучшие цены в 
-										<span>г.Кривой Рог</span>
+										<span>г.Киев</span>
 									</p>
 									<a class="btn-ph" href="tel:098-124-68-46">
 										<i class="fa fa-phone" aria-hidden="true"></i>
