--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<title>uyutmaster</title>
 	<meta name="description" content="ремонт и регулировка окон Киев, восстанавливаем окна, устраняем неполадки окон,">
-	<meta name="Keywords" content="ремонт и регулировка окон Киев, ремонт окон, регулировка окон, устраняем неполадки окон ">
+	<meta name="Keywords" content="Киев, ремонт и регулировка окон Киев, ремонт окон Киев, регулировка окон Киев, устраняем неполадки окон Киев, Киев окна">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
